...
    <string name="title_activity_detalle_campamento">DetalleCampamentoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="text_lupa">Buscar campamento</string>
    <string name="text_cuenta">Usuario</string>
    <string name="text_tareas">Tareas</string>
    <string name="text_herramientas">Herramientas</string>
    <string name="navigation_campamentos">Campamentos</string>
    <string name="navigation_inscritos">Inscripciones</string>
    <string name="navigation_cuenta">Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_resumen">Resumen</string>
    <string name="navigation_descripcion">Descripción</string>

    <string name="registro_title">Registro</string>
    <string name="nombre_usuario_hint">Nombre de Usuario</string>
    <string name="contrasena_hint">Contraseña</string>
    <string name="nombre_hint">Nombre</string>
    <string name="apellidos_hint">Apellidos</string>
...

        <!-- Para CuentaTrabajadorFragment -->
        <string name="titulo_cuenta_trabajador">Mi Cuenta como Trabajador</string>
    <string name="descripcion_cuenta_trabajador">Visualiza y edita la información de tu cuenta como trabajador.</string>

        <!-- Para los nuevos elementos del BottomNavigationView en CoordinadorActivity -->
        <string name="menu_perfil_coordinador">Perfil</string>
    <string name="menu_crear_campamento">Crear Campamento</string>

        <!-- Para PerfilCoordinadorFragment -->
        <string name="titulo_perfil_coordinador">Mi Perfil como Coordinador</string>
    <string name="descripcion_perfil_coordinador">Visualiza y edita la información de tu perfil como coordinador.</string>

...
