<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.inicioSesion.Login_Activity">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="31dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="31dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/text_registrarse" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_Titulo"
        android:layout_marginTop="97dp"
        android:hint="@string/username_hint" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameEditText"
        android:layout_marginTop="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView_Titulo"
        android:layout_width="273dp"
        android:layout_height="99dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="61dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="48sp" />

</RelativeLayout>
